tests/errors/sem18.kt
fun main() {
    var x: Boolean = 5 && 3; // invalid
}